# zkctf

./: .gitignore  Cargo.toml  README.md
ingonyama-2023/safe_bn254/: README.md  solution.py
metatrust-2023/ecdsa/: README.md  Verify.sol  miniecdsa.py  solution.py  test.py
src/ingonyama/i10_zokclub/: Cargo.toml
src/ingonyama/i11_lost_funds/: Cargo.toml
src/ingonyama/i12_the_power_of_integers/: Cargo.toml
src/ingonyama/i13_umculo/: Cargo.toml
src/ingonyama/i1_safe_bn254/: Cargo.toml  README.md
src/ingonyama/i1_safe_bn254/src/: solution.sage
src/ingonyama/i2_the_lost_relic/: Cargo.toml
src/ingonyama/i3_it_is_over_9000/: Cargo.toml
src/ingonyama/i4_the_day_of_sagittarius_iv/: Cargo.toml
src/ingonyama/i5_a_tale_of_two_keys/: Cargo.toml
src/ingonyama/i6_loki_s_vault/: Cargo.toml
src/ingonyama/i7_operation_zk_rescue/: Cargo.toml
src/ingonyama/i8_zk_rescue_part_2/: Cargo.toml
src/ingonyama/i9_zokclub_as_it_should_ve_been/: Cargo.toml
