[workspace]
members = [
    "src/ingonyama/i1_safe_bn254",
    "src/ingonyama/i2_the_lost_relic",
    "src/ingonyama/i3_it_is_over_9000",
    "src/ingonyama/i4_the_day_of_sagittarius_iv",
    "src/ingonyama/i5_a_tale_of_two_keys",
    "src/ingonyama/i6_loki_s_vault",
    "src/ingonyama/i7_operation_zk_rescue",
    "src/ingonyama/i8_zk_rescue_part_2",
    "src/ingonyama/i9_zokclub_as_it_should_ve_been",
    "src/ingonyama/i10_zokclub",
    "src/ingonyama/i11_lost_funds",
    "src/ingonyama/i12_the_power_of_integers",
    "src/ingonyama/i13_umculo",
]


[workspace.dependencies]
ark-ff = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
